[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[project]
name = "sftocf"
dynamic = ["version"]
description = "ColdFront plugin: Starfish storage integration"
readme = "README.md"
license = "GPL-3.0-or-later"
requires-python = ">=3.10"
authors = [{ name = "FASRC" }]
keywords = ["coldfront", "starfish", "hpc", "storage"]
classifiers = [
  "Framework :: Django",
  "Programming Language :: Python :: 3",
]
dependencies = [
  "Django>=4.2,<5",
  "pandas>=2.0",
  "requests>=2.28",
]

[project.urls]
Homepage = "https://github.com/fasrc/sftocf"

[tool.setuptools.packages.find]
where = ["."]
include = ["sftocf*"]

[tool.setuptools.package-data]
sftocf = [
  "servers.json",
  "data/*",
  "tests/testdata/*",
]

[tool.setuptools.dynamic]
version = { attr = "sftocf.__version__" }
